kubernetes/cluster/default/mariadb/mariadb.yaml
# Service: MariaDB
# Ingress: sql.brhd.io (for Adminer)
# Label: app.kubernetes.io/name: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: default
  labels:
    app.kubernetes.io/name: mariadb
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      name: db
  selector:
    app.kubernetes.io/name: mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: default
  labels:
    app.kubernetes.io/name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
  strategy:
    type: Recreate
  revisionHistoryLimit: 1
  template:
    metadata:
      namespace: default
      labels:
        app.kubernetes.io/name: mariadb
    spec:
      restartPolicy: Always
      containers:
        - name: db
          image: mariadb:11.5.2
          resources:
            requests:
              memory: 200M
              cpu: 50m
            limits:
              memory: 500M
              cpu: 250m
          ports:
            - containerPort: 3306
          readinessProbe:
            exec:
              command: ["mysql", "-u", "probe", "-e", "select 1"]
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 30
          livenessProbe:
            exec:
              command: ["mysqladmin", "-u", "probe", "ping"]
            initialDelaySeconds: 45
            timeoutSeconds: 2
            periodSeconds: 30
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
