kubernetes/cluster/default/mariadb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mariadb
  namespace: default
  labels:
    app.kubernetes.io/name: mariadb
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: sql.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mariadb
                port:
                  name: adminer
  tls:
    - hosts:
        - sql.brhd.io
